# gnn_release

./: .gitignore  .pre-commit-config.yaml  AAidx_PCA_2024.txt  README.md  TODO.md  combined_roc.py  convert_csv.py  copy.sh  evaluate_uncertainty.py  plot.py  pyproject.toml  readthedocs.yaml  requirements.txt  residue.py  roc.py  roc_individual.py  scoring.py  temp.py  test.py  test.sh  test_cpu.sh  test_uncertainity.sh  train.sh  train_cpu.py  train_model.py  train_umap.py  train_uncertainity.py  tutorial.ipynb  tutorial_seekgene_tcrs.ipynb  umap_model.py  uncertainty.sh
.github/: dependabot.yml
bootstrapping_evaluation/: bootstrap.sh  bootstrap_model.py
clonal_frequency_scoring/: final_method.ipynb  final_method_aml_zero.ipynb  final_method_phs002517.ipynb  final_method_sarcoma_zero.ipynb  final_method_seekgene.ipynb  final_method_theragen.ipynb  grid_search.ipynb  score_transformation.ipynb  simplified_aml_zero.ipynb  simplified_phs002517.ipynb  simplified_phs002517_boltz.ipynb  simplified_sarcoma_zero.ipynb  simplified_seekgene.ipynb  simplified_theragen.ipynb
control_leftovers_scores/: ir_2023-05-22_0357_646ae8135780e_extracted.tsv_12_control_cdr3_scores.txt  ir_2023-05-22_0359_646ae8af67480_extracted.tsv_152_control_cdr3_scores.txt  ir_2023-05-22_0400_646ae8f77da08_extracted.tsv_76_control_cdr3_scores.txt  ir_2023-05-22_0403_646ae9ae23f32_extracted.tsv_77_control_cdr3_scores.txt  ir_2023-05-22_0405_646aea09e5b58_extracted.tsv_8_control_cdr3_scores.txt  ir_2023-05-22_0407_646aea893521e_extracted.tsv_83_control_cdr3_scores.txt  ir_2023-05-22_0413_646aebd5ca82e_extracted.tsv_93_control_cdr3_scores.txt  ir_2023-05-22_0416_646aec960fad4_extracted.tsv_186_control_cdr3_scores.txt  ir_2023-05-22_0418_646aed10b30a2_extracted.tsv_11_control_cdr3_scores.txt  ir_2023-05-22_0431_646af02b8a776_extracted.tsv_123_control_cdr3_scores.txt  ir_2023-05-22_0434_646af0cf089c0_extracted.tsv_185_control_cdr3_scores.txt  ir_2023-05-22_0435_646af12838ea7_extracted.tsv_65_control_cdr3_scores.txt  ir_2023-05-22_0437_646af17f13251_extracted.tsv_125_control_cdr3_scores.txt  ir_2023-05-22_0438_646af1b3ca629_extracted.tsv_66_control_cdr3_scores.txt  ir_2023-05-22_0440_646af220a81e6_extracted.tsv_22_control_cdr3_scores.txt  ir_2023-05-22_0441_646af2868f1c6_extracted.tsv_145_control_cdr3_scores.txt  ir_2023-05-22_0442_646af2b949f2b_extracted.tsv_41_control_cdr3_scores.txt  ir_2023-05-22_0443_646af2e9a1489_extracted.tsv_120_control_cdr3_scores.txt  ir_2023-05-22_0444_646af319e6113_extracted.tsv_60_control_cdr3_scores.txt  ir_2023-05-22_0445_646af34d529f1_extracted.tsv_160_control_cdr3_scores.txt  ir_2023-05-22_0445_646af37a1c9f5_extracted.tsv_113_control_cdr3_scores.txt  ir_2023-05-22_0446_646af3ac1ce1a_extracted.tsv_141_control_cdr3_scores.txt  ir_2023-05-22_0447_646af3d8f36e9_extracted.tsv_109_control_cdr3_scores.txt  ir_2023-05-22_0448_646af40248436_extracted.tsv_191_control_cdr3_scores.txt  ir_2023-05-22_0448_646af430665c0_extracted.tsv_99_control_cdr3_scores.txt  ir_2023-05-22_0449_646af463b9c83_extracted.tsv_28_control_cdr3_scores.txt  ir_2023-05-22_0450_646af4947bffc_extracted.tsv_112_control_cdr3_scores.txt  ir_2023-05-22_0451_646af4bd5238e_extracted.tsv_84_control_cdr3_scores.txt  ir_2023-05-22_0451_646af4ed29f1e_extracted.tsv_91_control_cdr3_scores.txt  ir_2023-05-22_0452_646af515914db_extracted.tsv_170_control_cdr3_scores.txt  ir_2023-05-22_0453_646af53ed1016_extracted.tsv_137_control_cdr3_scores.txt  ir_2023-05-22_0454_646af5689c0de_extracted.tsv_63_control_cdr3_scores.txt  ir_2023-05-22_0454_646af599aaffc_extracted.tsv_114_control_cdr3_scores.txt  (+162 more)
graph_generation/: alternative_parser.py  (+7 more)
(+402 files in other folders)
