[project]
name = "tcrgnn"
version = "0.1.0"
description = "GNN TCR Python Package"
authors = [{ name = "Amos Choo", email = "amos.choo@uq.edu.au" }]
dependencies = [
    "torch_geometric==2.5.3",
    "matplotlib",
    "seaborn",
    "networkx",
    "biopython",
    "scipy==1.16.2",
    "torch==2.9.0",
    "torchvision==0.18.1",
    "torchaudio==2.3.1",
    "numpy<=2.3.1",
    "pandas<=2.3.3"
]

requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["old_folders","*.ipynb"]

# Enable Ruff formatting (replaces Black)
[tool.ruff.format]
quote-style = "double"       # or "single"
docstring-code-format = true
[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "W",  # warnings
    "I",  # import sorting
    "UP", # pyupgrade
    "B",  # bugbear
    "C4", # comprehensions
]
ignore = [
    "E501", # optionally ignore line length if annoying
]
fixable = ["ALL"]


[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",                       # extra summary
    "--strict-markers",
    "--strict-config",
    "--maxfail=1",
    "--cov=tcrgnn",
    "--cov-report=term-missing",
]

markers = [
    "gpu: tests that require CUDA",
    "slow: long running tests",
    "integration: integration tests that touch disk or multiple modules",
]


[dependency-groups]
dev = [
    "ruff>=0.14.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "pytest-mock>=3.15.1",
]

docs = [
  "sphinx>=8",
  "furo",
  "sphinx-copybutton",
  "sphinx-autobuild",
  "sphinx_rtd_theme",
  "myst-nb"
]

[project.optional-dependencies]
docs = [
  "sphinx>=8",
  "furo",
  "sphinx-copybutton",
  "sphinx-autobuild",
  "sphinx_rtd_theme",
  "myst-nb"
]
